# ChangeLog for dev-python/configobj
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/configobj/ChangeLog,v 1.25 2010/07/06 15:43:05 ssuominen Exp $

  06 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  configobj-4.7.2.ebuild:
  Keyword ~ppc64 wrt #311825

  21 Apr 2010; Christian Faulhammer <fauli@gentoo.org>
  configobj-4.7.2.ebuild:
  stable x86, bug 313151

  11 Apr 2010; <nixnut@gentoo.org> configobj-4.7.2.ebuild:
  ppc stable #313151

  10 Apr 2010; Markos Chandras <hwoarang@gentoo.org> configobj-4.7.2.ebuild:
  Stable on amd64 wrt bug #313151

*configobj-4.7.2 (04 Mar 2010)

  04 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +configobj-4.7.2.ebuild, +files/configobj-4.7.2-fix_tests.patch:
  Version bump.

  27 Feb 2010; Fabian Groffen <grobian@gentoo.org> configobj-4.7.1.ebuild:
  Marked ~x64-macos, thanks Ramon van Alteren in bug #306705

  25 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  configobj-4.7.0.ebuild:
  stable x86, bug 305187

*configobj-4.7.1 (08 Feb 2010)

  08 Feb 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +configobj-4.7.1.ebuild:
  Version bump.

*configobj-4.7.0 (11 Jan 2010)

  11 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +configobj-4.7.0.ebuild:
  Version bump.

  08 Nov 2009; nixnut <nixnut@gentoo.org> configobj-4.6.0.ebuild:
  ppc stable #290607

  04 Nov 2009; Markus Meier <maekke@gentoo.org> configobj-4.6.0.ebuild:
  amd64/x86 stable, bug #290607

  04 Nov 2009; Sébastien Fabbro <bicatali@gentoo.org>
  configobj-4.6.0.ebuild, +files/configobj-4.6.0-bad-tests.patch:
  Removed some bad tests (bug #277921)

  10 Oct 2009; Fabian Groffen <grobian@gentoo.org> configobj-4.6.0.ebuild:
  Merge from Prefix

  05 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> configobj-4.6.0.ebuild:
  Keywording for ppc, bug 280023

  05 Sep 2009; Patrick Lauer <patrick@gentoo.org> -configobj-4.5.3.ebuild: